--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^0.14.4
+  firebase_core: ^0.5.3
+  provider: ^4.3.2+3
+  flutter_spinkit: ^4.1.2+1
 
 
   # The following adds the Cupertino Icons font to your application.
